fix(transfer): fix scrollbar problem

--- a/packages/web-vue/components/transfer/style/index.less
+++ b/packages/web-vue/components/transfer/style/index.less
@@ -21,6 +21,10 @@
         @transfer-search-padding-bottom @transfer-search-padding-left;
     }
 
+    & .@{prefix}-scrollbar {
+      height: 100%;
+    }
+
     &-list {
       flex: 1;
     }
